SAK-48525 dashboard. Hide tasks widget by default. (#11990)
(cherry picked from commit 753fdc74ef85620e4735c14ce00bc95787071cda)